--- a/mail/mail/static/mail/styles.css
+++ b/mail/mail/static/mail/styles.css
@@ -1,300 +1,273 @@
 @font-face {
-    font-family: "Inter";
-    src: url(/static/mail/Inter-VariableFont_slnt\,wght.ttf);
+	font-family: "Inter";
+	src: url(/static/mail/Inter-VariableFont_slnt\,wght.ttf);
 }
 
 body {
-    background: #F7F8FC;
+	background: #f7f8fc;
 }
 
 textarea {
-    min-height: 400px;
+	min-height: 400px;
 }
-
-button {
-    border: none;
-    background: none;
-}
-
-button:hover {
-    background: #DFE0E0;
-}
-
-button:focus {
-    border: none;
-    background: #D3E3FC;
-}
-
-ul, li {
-    list-style-type: none;
-    padding: 0;
+ul,
+li {
+	list-style-type: none;
+	padding: 0;
 }
 
 hr {
-    width: 60.21em;
-    margin: 0;
+	width: 100%;
+	margin: 0;
 }
 
-header{
-    display: flex;
-    padding: .56em;
+header {
+	display: flex;
+	padding: 0.56em;
 
-    align-items: center;
+	align-items: center;
 }
 
-main{
-    display: flex;
+main {
+	display: flex;
+}
+
+button {
+	border: none;
+	background: none;
+}
+
+button:hover {
+	background: #dfe0e0;
+}
+
+.nav-button:active,
+button:focus {
+	outline: none;
+	border: none;
+}
+.active {
+	background: #d3e3fc;
 }
 
 .container {
-    max-width: 100vw;
-    margin: 0;
-    padding: 0;
+	max-width: 100vw;
+	margin: 0;
+	padding: 0;
 }
 
 .header-container {
-    height: 4.06em
+	height: 4.06em;
 }
 
 .flex {
-    display: flex;
+	display: flex;
 }
-
+.justify {
+	justify-content: space-between;
+}
+.grow {
+	flex-grow: 1;
+}
 .search-form {
-    height: 2.94em;
-    width: 39.75em;
-    border-radius: .50em;
+	height: 2.94em;
+	width: 39.75em;
+	border-radius: 0.5em;
 
-    background: #EAF1FB;
+	background: #eaf1fb;
 }
 
 .current-user {
-    flex-grow: 1;
+	flex-grow: 1;
 }
 
 .logos {
-    gap: .87em;
-    padding-left: .95em;
-    padding-right: 6.50em;
+	gap: 0.87em;
+	padding-left: 0.95em;
+	padding-right: 6.5em;
 }
 .btn-3bar {
-    height: 1.88em;
-    width: 1.88em;
-    border-radius: 6.25em;
-    background: #DEE1E7;
+	height: 1.88em;
+	width: 1.88em;
+	border-radius: 6.25em;
+	background: #dee1e7;
 
-    text-align: center;
+	text-align: center;
 }
 
-/* \\\\\\\ MAIN SECTION /////// */ 
+/* \\\\\\\ MAIN SECTION /////// */
 
 /* LEFT SIDE (sidebar)*/
 .side-bar {
-    width: 16em;
+	width: 16em;
 }
 
 .btn-compose {
-    height: 3.44em;
-    width: 12.44em;
-    margin-top: .625em;
-    margin-left: .75em;
-    border-radius: .94em;
+	height: 3.44em;
+	width: 12.44em;
+	margin-top: 0.625em;
+	margin-left: 0.75em;
+	border-radius: 0.94em;
 
-    background: #C4E7FD;
+	background: #c4e7fd;
 }
 
 .btn-compose:hover {
-    height: 3.44em;
-    width: 12.44em;
-    margin-top: .625em;
-    margin-left: .75em;
-    border-radius: .94em;
+	height: 3.44em;
+	width: 12.44em;
+	margin-top: 0.625em;
+	margin-left: 0.75em;
+	border-radius: 0.94em;
 
-    box-shadow: 0px 5px 8px rgba(19, 18, 18, 0.25);
-    transform: scale(1);
+	box-shadow: 0px 5px 8px rgba(19, 18, 18, 0.25);
+	transform: scale(1);
 
-    background: #C4E7FD;
-    
+	background: #c4e7fd;
 }
 
 .nav-container {
-    margin-top: 1.125em;
+	margin-top: 1.125em;
 }
 
 .nav-button {
-    width: 14.69em;
-    height: 2em;
+	width: 14.69em;
+	height: 2em;
 
-    border-top-right-radius: 6.25em;
-    border-bottom-right-radius: 6.25em;
-    
+	border-top-right-radius: 6.25em;
+	border-bottom-right-radius: 6.25em;
+}
+.button-content {
+	display: flex;
+	align-items: center;
+	margin-left: 1rem;
+	margin-right: 1rem;
 }
 
-.nav-button:hover {
+.button-content img {
+	margin-right: 0.5rem;
+}
 
+.content-hearder {
+	display: flex;
+	justify-content: space-between;
+	height: 3em;
+}
+
+.left-button,
+.mailbox {
+	display: flex;
+	align-items: center;
+	margin-left: 10px;
+}
+.mailbox > img {
+	margin-left: 10px;
+	margin-right: 10px;
+}
+.mailbox > h6 {
+	margin-bottom: 0;
+	line-height: 3em;
+}
+.mailbox-header {
+	display: flex;
+	height: 3em;
 }
 
 /* Right SIDE (email content)*/
 .emails-content {
-    width: 61.25em;
-    height: 35em;
-    border-radius: .94em;
+	width: 65.25em;
+	height: 85vh;
+	border-radius: 0.94em;
 
-    background: #fff;
+	background: #fff;
 }
 
 .email {
-    width: 60.21em;
-    height: 2.56em;
+	width: 100%;
+	height: 2.56em;
 
-    display: flex;
-    align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.checkbox-container {
+	display: flex;
+}
+.form-check {
+	display: flex;
+	align-items: center;
+	margin-right: 10px; /* Add some space between the checkbox and the email content */
+}
+.form-check-input {
+	position: relative;
+	width: 0.85em;
+	height: 0.85em;
+	margin-right: 0.31em; /* Add some space between the checkbox and the email content */
+	margin-left: 0.31em;
+}
+.email:hover {
+	background: #f2f5fc;
+	border-width: 0px 0.5px 0.5px 0.5px;
+	border-style: solid;
+	border-color: #eae8e8;
+	box-shadow: 0px 2px 3px rgba(34, 33, 33, 0.25);
+	transform: scale(1);
 }
 
 .email:hover {
-    background: #F2F5FC;
-    border-width: 0px 0.5px 0.5px 0.5px;
-    border-style: solid;
-    border-color: #EAE8E8;
-    box-shadow: 0px 2px 3px rgba(34, 33, 33, 0.25);
-    transform: scale(1);
-}
-
-.email:hover {
-    cursor: pointer;
-}
-
-.checkbox-btn {
-    margin-left: 1.31em;
+	cursor: pointer;
 }
 
 /* Emails view preview */
-
 .preview-font {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
-    font-size: .95rem;
-    /* identical to box height */
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 600;
+	font-size: 0.95rem;
+	/* identical to box height */
 
-    color: #2C2D2D;
-
+	color: #2c2d2d;
 }
 
 .sender-preview {
-    margin-left: .75em;
-    width: 12.5em;
+	margin-left: 0.75em;
+	width: 12.5em;
 }
 
 .subject-body {
-    white-space: nowrap; 
-    width: 35.62em;
+	white-space: nowrap;
+	width: 35.62em;
 
-    overflow: hidden;
-    text-overflow: ellipsis;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .body-preview {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 350;
-    font-size: .95rem;
-    /* identical to box height */
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 350;
+	font-size: 0.95rem;
+	/* identical to box height */
 
-    color: #565656;
+	color: #565656;
 }
 
 .datetime-preview {
-    white-space: nowrap; 
-    flex-grow: 1;
+	white-space: nowrap;
+	flex-grow: 1;
 
-    text-align: right;
-    padding-right: 2em;
+	text-align: right;
+	padding-right: 2em;
 
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
-    font-size: .90rem;
-    /* identical to box height */
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 600;
+	font-size: 0.9rem;
+	/* identical to box height */
 
-    color: #2C2D2D;
+	color: #2c2d2d;
 }
 
-
-/* <<<<<< Checkbox Styles Start >>>>>> */
-
-.checkbox-ul ul li {
-    display: inline;
-}
-
-.checkbox-btn {
-    margin-left: .95em;
-}
-
-@keyframes pull {
-    0% {
-        height: 0;
-    }
-    100% {
-        height: 1.2rem;
-    }
-}
-@keyframes pop {
-    0% {
-        opacity: 0;
-    }
-    75% {
-        opacity: 1;
-    }
-    100% {
-        transform: scale(1.2);
-    }
-}
-
-.checkbox-pop,
-.checkbox-spin {
-    display: none;
-}
-
-.checkbox-pop + span,
-.checkbox-spin + span {
-    display: inline-block;
-    width: 25px;
-    height: 19px;
-    margin: 0 5px -4px 0;
-    /*layout relationship between check and label*/
-}
-.checkbox-pop + span:before, .checkbox-pop + span:after,
-.checkbox-spin + span:before, .checkbox-spin + span:after {
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    content: "";
-    position: absolute;
-    z-index: 1;
-    width: 1rem;
-    height: 1rem;
-    background: transparent;
-    border: 2px solid #ff4040;
-}
-
-.checkbox-pop + span:after,
-.checkbox-spin + span:after {
-    z-index: 0;
-    border: none;
-}  
-
-.checkbox-pop:checked + span:before {
-    animation: pop 0.3s ease;
-    z-index: 100;
-    background: #ff4040;
-}
-
-.checkbox-spin:checked + span:before {
-    -webkit-transform: rotateZ(180deg);
-    -moz-transform: rotateZ(180deg);
-    -ms-transform: rotateZ(180deg);
-    -o-transform: rotateZ(180deg);
-    transform: rotateZ(180deg);
-    background: #ff4040;
+/* Little Apps  (email content)*/
+.apps-container {
+	flex-grow: 1;
 }
