--- a/commerce/auctions/templates/auctions/login.html
+++ b/commerce/auctions/templates/auctions/login.html
@@ -1,24 +1,33 @@
-{% extends "auctions/layout.html" %}
+{% extends "auctions/layout.html" %} {% block body %}
 
-{% block body %}
+<h2>Login</h2>
 
-    <h2>Login</h2>
+{% if message %}
+<div>{{ message }}</div>
+{% endif %}
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+<form action="{% url 'login' %}" method="post">
+	{% csrf_token %}
+	<div class="form-group">
+		<input
+			autofocus
+			class="form-control"
+			type="text"
+			name="username"
+			placeholder="Username"
+		/>
+	</div>
+	<div class="form-group">
+		<input
+			class="form-control"
+			type="password"
+			name="password"
+			placeholder="Password"
+		/>
+	</div>
+	<input class="btn btn-primary" type="submit" value="Login" />
+</form>
 
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Login">
-    </form>
-
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+Don't have an account? <a href="{% url 'register' %}">Register here.</a>
 
 {% endblock %}
