--- a/commerce/auctions/templates/auctions/messages.html
+++ b/commerce/auctions/templates/auctions/messages.html
@@ -1,8 +1,6 @@
-{% if messages %}
-    {% for message in messages %}
-        <div class="alert {{ message.tags}} m-2" id="msg" role="alert">
-            <button type="button" class="close" data-dismiss="alert">×</button>
-            <strong>{{message}}</strong>
-        </div>
-    {% endfor %}
-{% endif %}
+{% if messages %} {% for message in messages %}
+<div class="alert {{ message.tags}} m-2" id="msg" role="alert">
+	<button type="button" class="close" data-dismiss="alert">×</button>
+	<strong>{{message}}</strong>
+</div>
+{% endfor %} {% endif %}
