--- a/mail/mail/static/mail/styles.css
+++ b/mail/mail/static/mail/styles.css
@@ -7,9 +7,6 @@ body {
 	background: #f7f8fc;
 }
 
-textarea {
-	min-height: 25em;
-}
 ul,
 li {
 	list-style-type: none;
@@ -121,6 +118,7 @@ button:focus {
 	margin-left: 1.26em;
 	border-radius: 6.25em;
 	object-fit: cover;
+	cursor: pointer;
 }
 
 .logos {
@@ -144,8 +142,7 @@ button:focus {
 }
 
 .btn-compose {
-	height: 3.44em;
-	width: 12.44em;
+	padding: 1em;
 	margin-top: 0.625em;
 	margin-left: 0.75em;
 	border-radius: 0.94em;
@@ -154,16 +151,13 @@ button:focus {
 }
 
 .btn-compose:hover {
-	height: 3.44em;
-	width: 12.44em;
-	margin-top: 0.625em;
-	margin-left: 0.75em;
-	border-radius: 0.94em;
-
+	background: #c4e7fd;
 	box-shadow: 0px 5px 8px rgba(19, 18, 18, 0.25);
 	transform: scale(1);
-
-	background: #c4e7fd;
+}
+.compose-button {
+	display: flex;
+	gap: 0.5em;
 }
 
 .nav-container {
@@ -485,20 +479,32 @@ td {
 }
 
 .rf-btn-container {
-	gap: 0.5rem;
+	gap: 0.62rem;
 	margin-top: 3em;
 }
-.respond-btn {
-	width: 6.5em;
-	height: 2.25em;
-	border: 1px solid #757575;
-	border-radius: 6.25em;
+.rf-btn-container > a:hover {
+	text-decoration: none;
+	background: #dfe0e0;
 }
-.forward-btn {
-	width: 6.5em;
-	height: 2.25em;
+.rf-btn {
+	padding: 0.55em 1em;
 	border: 1px solid #757575;
 	border-radius: 6.25em;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 0.5em;
+}
+
+.rf-btn span {
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 500;
+	font-size: 0.88rem;
+	line-height: 1rem;
+
+	color: #464646;
 }
 
 .email-body {
@@ -654,11 +660,302 @@ td {
 /* Handle */
 .settings-body::-webkit-scrollbar-thumb {
 	width: 10px;
-	border-radius: 6px;
+	border-radius: 3px;
 	background: rgba(167, 163, 161, 0.7);
 }
 
 /* Handle on hover */
 .settings-body::-webkit-scrollbar-thumb:hover {
 	background: rgba(139, 136, 135, 0.7);
+}
+
+.compose-container {
+	width: 31.81em;
+	height: 29.94em;
+	border-radius: 0.5em;
+	bottom: 0;
+	right: 2.5em;
+	z-index: 1;
+
+	display: none;
+	position: absolute;
+	overflow: hidden;
+	background: #fff;
+	box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.07);
+}
+.respond-modal {
+	display: flex;
+}
+.respond-container {
+	width: 100%;
+	padding: 0.88em;
+}
+
+.compose-header-wrapper {
+	height: 2.44em;
+	width: 100%;
+	background: #f2f5fc;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.compose-header {
+	display: flex;
+	align-items: center;
+}
+.compose-header h4 {
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 500;
+	font-size: 0.88rem;
+	line-height: 1.06rem;
+	padding-left: 0.88em;
+	margin: 0;
+	/* identical to box height */
+	color: #041e49;
+}
+.scales-btn {
+	display: flex;
+	gap: 0.2em;
+}
+
+.scales-btn img:hover {
+	background: #ededed;
+}
+
+.compose-container form {
+	padding-left: 0.88em;
+	padding-right: 0.88em;
+}
+
+.compose-textarea {
+	position: relative;
+	width: 100%;
+	height: 20em;
+}
+
+.compose-input > input,
+textarea {
+	width: 100%;
+	padding-top: 0.3em;
+	padding-bottom: 0.3em;
+	box-sizing: border-box;
+	border: none;
+	outline: none;
+}
+
+.compose-input > input:focus,
+textarea:focus {
+	border: none;
+	outline: none;
+	background: transparent;
+	border-style: none;
+	border-color: Transparent;
+}
+
+textarea {
+	width: 100%;
+	height: 100%;
+	background: #fff;
+	resize: none;
+}
+
+.text-editor {
+	width: 100%;
+	height: 2.31em;
+	bottom: 0.5em;
+	position: absolute;
+	display: flex;
+	background: #fff;
+	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.compose-submit {
+	bottom: 0;
+}
+
+.send-btn {
+	display: flex;
+	align-items: center;
+	width: 6.56em;
+	height: 2.25em;
+
+	background: #3471d2;
+	border-radius: 6.25em;
+}
+
+.send-btn input {
+	border: none;
+	background: transparent;
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 600;
+	font-size: 0.88rem;
+	line-height: 1.06rem;
+	/* identical to box height */
+
+	color: #ffffff;
+}
+
+.userlog-modal {
+	position: absolute;
+	width: 23.38em;
+	z-index: 2;
+	top: 3em;
+	right: 2em;
+	border-radius: 1.56em;
+
+	display: none;
+	background: #eff2fd;
+	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.userlog-card {
+	width: 22.5em;
+	margin: 0.44em 0.44em 0.19em 0.44em;
+
+	background: #ffffff;
+	border-top-left-radius: 1.25em;
+	border-top-right-radius: 1.25em;
+	border-bottom-left-radius: 0.18em;
+	border-bottom-right-radius: 0.18em;
+}
+
+.currentUser {
+	display: flex;
+	gap: 0.72em;
+	padding: 1em 0 1.49em 1em;
+}
+
+.currentUser .user-avatar > .avatar img {
+	width: 4em;
+	height: 4em;
+	border-radius: 6.25em;
+	object-fit: cover;
+}
+.currentUser .user-avatar > .change-avatar {
+	display: flex;
+	justify-content: flex-end;
+
+	position: relative;
+	z-index: 1;
+	left: 0.4em;
+	bottom: 1.65em;
+}
+.currentUser .user-avatar > .change-avatar img {
+	width: 1.88em;
+	height: 1.88em;
+	border-radius: 6.25em;
+	object-fit: cover;
+}
+
+.manage-user {
+	display: flex;
+	flex-direction: column;
+	gap: 1.56em;
+	flex-grow: 1;
+}
+.username {
+	display: flex;
+	flex-direction: column;
+	margin-top: 0.88em;
+}
+
+.username > h6 {
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 0.88rem;
+	line-height: 1.06rem;
+	margin: 0;
+	/* identical to box height */
+
+	color: #595959;
+}
+
+.username > span {
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 0.75rem;
+	line-height: 0.94rem;
+	/* identical to box height */
+
+	color: #595959;
+}
+
+.account-manage {
+	width: 14.12em;
+	height: 2em;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	box-sizing: border-box;
+
+	border: 1px solid #595959;
+	border-radius: 0.44em;
+}
+
+.account-manage span {
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 0.88rem;
+	line-height: 1.06rem;
+	/* identical to box height */
+
+	color: #595959;
+}
+.add-account {
+	margin-left: 0.44em;
+	margin-right: 0.44em;
+
+	background: #fff;
+	border-top-left-radius: 0.18em;
+	border-top-right-radius: 0.18em;
+	border-bottom-left-radius: 1.25em;
+	border-bottom-right-radius: 1.25em;
+}
+.add-account,
+.logout-user {
+	display: flex;
+	gap: 2.19em;
+	align-items: center;
+	padding: 0.94em 2.12em;
+}
+
+.add-account,
+.logout-user {
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 500;
+	font-size: 0.88rem;
+	line-height: 1.06rem;
+	/* identical to box height */
+
+	color: #595959;
+}
+
+.add-account:hover,
+.logout-user:hover {
+	background: #d3e3fc;
+	text-decoration: none;
+	color: #595959;
+}
+
+.terms-conditions {
+	display: flex;
+	justify-content: space-between;
+	padding: 1.06em 5.38em;
+}
+.terms-conditions a {
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 0.75rem;
+	line-height: 0.94rem;
+	/* identical to box height */
+
+	color: #282828;
 }
